feat(api): issue fortunes atomically
